load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("@emsdk//emscripten_toolchain:wasm_rules.bzl", "wasm_cc_binary")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "sentencepiece",
    srcs = ["sentencepiece_wasm.cc"],
    copts = [
        "-frtti",
        "-fexceptions",
    ],
    linkopts = [
        "--bind",
    ],
    linkstatic = 1,
    deps = [
        "@org_tensorflow_text//tensorflow_text/core/kernels/sentencepiece:optimized_decoder",
        "@org_tensorflow_text//tensorflow_text/core/kernels/sentencepiece:optimized_encoder",
    ],
)

wasm_cc_binary(
    name = "sentencepiece_wasm",
    cc_target = ":sentencepiece",
)
